--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-cron": "^3.0.2",
     "telegraf": "^4.14.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@types/node-cron": "^3.0.10",
     "@types/node": "^20.8.4",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
